welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:4: error: Boolean does not take parameters
  	forward()
               ^