welcome.lessons.welcome.methods.args.MethodsArgs.scala.code
def move(stepCount: Int, forward: Boolean) {
  if (forward)
  	forward()
  else 
  	backward(stepCount)
}